meson: make it backward-compatible with version 0.54
meson.project_source_root is available since 0.56, but we don't
really need that: replace it by getting the source root at the
main meson.build file with:

	source_root = meson.current_source_dir()

Tested with openSUSE leap 15.2.

While here, add whitespace at:
	found_iconv = dep_iconv.found()

Signed-off-by: Mauro Carvalho Chehab <mchehab@kernel.org>

--- a/doc/meson.build
+++ b/doc/meson.build
@@ -8,7 +8,7 @@ cdata.set('DOCDIR', 'doc')
 cdata.set('GENERATE_HTML', get_option('doxygen-html'))
 cdata.set('GENERATE_MAN', get_option('doxygen-man'))
 cdata.set('PROJECT', meson.project_name())
-cdata.set('SRCDIR', meson.project_source_root())
+cdata.set('SRCDIR', source_root)
 cdata.set('VERSION', as_version)
 
 doxyfile = configure_file(input : 'Doxyfile.in',
