v4l2-tracer: add quotes to -DLIBTRACER_PATH="@0@"
-DLIBTRACER_PATH="@0@" needs quotes around @0@, otherwise the
string '/usr/local/lib/x86_64-linux-gnu/' turns into
'/usr/local/lib/x86_64-1-gnu/' since the C preprocessor sets the
define 'linux' to '1'.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/v4l2-tracer/meson.build
+++ b/utils/v4l2-tracer/meson.build
@@ -111,7 +111,7 @@ v4l2_tracer_deps = [
 ]
 
 v4l2_tracer_cpp_args = [
-    '-DLIBTRACER_PATH=@0@'.format(get_option('prefix') / get_option('libdir')),
+    '-DLIBTRACER_PATH="@0@"'.format(get_option('prefix') / get_option('libdir')),
 ]
 
 if have_visibility
