libv4l1/libv4l2/v4l2-tracer: use common meson c_args/cpp_args to disable transparent large file support
Use common meson c_args/cpp_args to disable transparent large
file support for the wrappers as already done in utils/v4l2-tracer
for lib/libv4l1/v4l1compat.c and lib/libv4l2/v4l2convert.c too.

Signed-off-by: Peter Seiderer <ps.report@gmx.net>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/lib/libv4l1/meson.build
+++ b/lib/libv4l1/meson.build
@@ -60,5 +60,6 @@ v4l1compat = shared_module('v4l1compat',
                            name_prefix : '',
                            install : true,
                            install_dir : libv4l1privdir,
+                           c_args : v4l2_wrapper_args,
                            dependencies : v4l1compat_deps,
                            include_directories : v4l2_utils_incdir)
