--- a/utils/cec-ctl/cec-ctl.1.in
+++ b/utils/cec-ctl/cec-ctl.1.in
@@ -271,14 +271,15 @@ via the \fB\-\-analyze\-pin\fR option. Use \- to write to stdout instead of to a
 Read and analyze the CEC pin events from the given file. Use \- to read from stdin
 instead of from a file.
 .TP
-\fB\-\-test\-power\-cycle\fR [\fIpolls\fR=\fI<n>\fR][,\fIsleep\fR=\fI<secs>\fR]
-This option tests the power cycle behavior of the display. It polls up to
+\fB\-\-test\-standby\-wakeup\-cycle\fR [\fIpolls\fR=\fI<n>\fR][,\fIsleep\fR=\fI<secs>\fR]
+This option tests the standby-wakeup cycle behavior of the display. It polls up to
 \fI<n>\fR times (default 15), waiting for a state change. If that fails then it
 waits \fI<secs>\fR seconds (default 10) before retrying this.
 .TP
-\fB\-\-stress\-test\-power\-cycle\fR \fIcnt\fR=\fI<count>\fR[,\fIpolls\fR=\fI<n>\fR][,\fImax-sleep\fR=\fI<maxsecs>\fR][,\fImin-sleep\fR=\fI<minsecs>\fR][,\fIseed\fR=\fI<seed>\fR][,\fIrepeats\fR=\fI<reps>\fR][,\fIsleep-before-on\fR=\fI<secs1>\fR][,\fIsleep-before-off\fR=\fI<secs2>\fR]
-This option performs a stress test for a display: it power cycles the display \fI<count>\fR
-times using the CEC Standby and Image View On commands. If \fI<count>\fR is 0, then never stop.
+\fB\-\-stress\-test\-standby\-wakeup\-cycle\fR \fIcnt\fR=\fI<count>\fR[,\fIpolls\fR=\fI<n>\fR][,\fImax-sleep\fR=\fI<maxsecs>\fR][,\fImin-sleep\fR=\fI<minsecs>\fR][,\fIseed\fR=\fI<seed>\fR][,\fIrepeats\fR=\fI<reps>\fR][,\fIsleep-before-on\fR=\fI<secs1>\fR][,\fIsleep-before-off\fR=\fI<secs2>\fR]
+This option performs a stress test for a display: it cycles the display \fI<count>\fR
+times in and out of standby using the CEC Standby and Image View On commands.
+If \fI<count>\fR is 0, then never stop.
 It polls up to \fI<n>\fR times (default 30), waiting for a state change.
 If \fI<maxsecs>\fR is non-zero (0 is the default), then sleep for a random number of seconds
 between \fI<minsecs>\fR (0 is the default) and \fI<maxsecs>\fR before each <Standby> or
@@ -291,6 +292,19 @@ non-zero \fI<reps>\fR value is needed in order to pass this test, then that indi
 a problem.
 If \fI<secs1>\fR is specified, then sleep for <secs1> seconds before transmitting <Image View On>.
 If \fI<secs2>\fR is specified, then sleep for <secs2> seconds before transmitting <Standby>.
+.TP
+\fB\-\-stress\-test\-random\-standby\-wakeup\-cycle\fR \fIcnt\fR=\fI<count>\fR[,\fImax-sleep\fR=\fI<maxsecs>\fR][,\fImin-sleep\fR=\fI<minsecs>\fR][,\fIseed\fR=\fI<seed>\fR]
+This option performs a stress test for a display: it cycles the display \fI<count>\fR
+times in and out of standby using the CEC Standby and Image View On commands.
+After each command wait between \fI<minsecs>\fR (default is 0) and \fI<maxsecs>\fR (default is 10)
+seconds.
+This test does not check if the display reached the new state,
+this test is meant to check if the display can handle state change commands
+while still transitioning to a new state.  After every 10 cycles it attempts to properly
+wake up the display and check if that works. If not, this test fails.
+If \fI<count>\fR is 0, then never stop.
+If \fI<seed>\fR is specified, then set the randomizer seed to that value instead of
+using the current time as seed.
 .TP
 \fB\-\-help\-all\fR
 Prints the help message for all options.
