cec-follower: add --exclusive option
There was no option to select exclusive follower mode. Add this.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/cec-follower/cec-follower.1.in
+++ b/utils/cec-follower/cec-follower.1.in
@@ -76,6 +76,9 @@ Prints the help message.
 \fB\-n\fR, \fB\-\-no\-warnings\fR
 Turn off warning messages.
 .TP
+\fB\-e\fR, \fB\-\-exclusive\fR
+If specified, then the follower uses exclusive mode (CEC_MODE_EXCL_FOLLOWER).
+.TP
 \fB\-m\fR, \fB\-\-show\-msgs\fR
 Show received messages.
 .TP
