v4l2-ctl.1.in: add missing --help-meta
The --help-meta option was not documented in the manpage, add it.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/v4l2-ctl/v4l2-ctl.1.in
+++ b/utils/v4l2-ctl/v4l2-ctl.1.in
@@ -36,6 +36,9 @@ Prints the help message.
 Prints the help message for all options that get/set/list inputs and outputs, both
 video and audio.
 .TP
+\fB\-\-help\-meta\fR
+Prints the help message for all options that get/set/list metadata formats.
+.TP
 \fB\-\-help\-misc\fR
 Prints the help message for miscellaneous options.
 .TP
