--- a/utils/v4l2-tracer/meson.build
+++ b/utils/v4l2-tracer/meson.build
@@ -2,48 +2,6 @@ if not dep_jsonc.found()
     subdir_done()
 endif
 
-# Generated sources
-
-v4l2_tracer_gen = files('v4l2-tracer-gen.pl')
-
-# Don't reorder the inputs The order of the input headers matters
-v4l2_tracer_gen_inputs = files(
-    '..' / '..' / 'include' / 'linux' / 'v4l2-controls.h',
-    '..' / '..' / 'include' / 'linux' / 'videodev2.h',
-    '..' / '..' / 'include' / 'linux' / 'media.h',
-    '..' / '..' / 'include' / 'linux' / 'v4l2-common.h',
-)
-
-v4l2_tracer_gen_common_sources = custom_target('v4l2-tracer-gen-common-sources',
-                                               input : v4l2_tracer_gen_inputs,
-                                               output : ['v4l2-tracer-info-gen.h'],
-                                               command : [
-                                                   v4l2_tracer_gen,
-                                                  '-o', meson.current_build_dir(),
-                                                    '-t', 'common',
-                                                   '@INPUT@',
-                                               ])
-
-v4l2_tracer_gen_retrace_sources = custom_target('v4l2-tracer-gen-retrace-sources',
-                                                input : v4l2_tracer_gen_inputs,
-                                                output : ['retrace-gen.cpp', 'retrace-gen.h'],
-                                                command : [
-                                                    v4l2_tracer_gen,
-                                                    '-o', meson.current_build_dir(),
-                                                    '-t', 'retrace',
-                                                    '@INPUT@',
-                                                ])
-
-v4l2_tracer_gen_trace_sources = custom_target('v4l2-tracer-gen-trace-sources',
-                                              input : v4l2_tracer_gen_inputs,
-                                              output : ['trace-gen.cpp', 'trace-gen.h'],
-                                              command : [
-                                                  v4l2_tracer_gen,
-                                                  '-o', meson.current_build_dir(),
-                                                  '-t', 'trace',
-                                                  '@INPUT@',
-                                              ])
-
 # V4L2 tracer library
 
 libv4l2tracer_sources = files(
@@ -51,14 +9,10 @@ libv4l2tracer_sources = files(
     'media-info.cpp',
     'trace-helper.cpp',
     'trace.cpp',
+    'trace-gen.cpp',
     'v4l2-info.cpp',
     'v4l2-tracer-common.cpp',
 )
-
-libv4l2tracer_sources += [
-    v4l2_tracer_gen_common_sources,
-    v4l2_tracer_gen_trace_sources,
-]
 
 libv4l2tracer_deps = [
     dep_jsonc,
@@ -84,14 +38,11 @@ v4l2_tracer_sources = files(
     'retrace-helper.cpp',
     'retrace.cpp',
     'v4l2-info.cpp',
+    'trace-gen.cpp',
+    'retrace-gen.cpp',
     'v4l2-tracer-common.cpp',
     'v4l2-tracer.cpp',
 )
-
-v4l2_tracer_sources += [
-    v4l2_tracer_gen_common_sources,
-    v4l2_tracer_gen_retrace_sources,
-]
 
 v4l2_tracer_deps = [
     dep_jsonc,
