meson: fix has_function fork detection (needs suitable include)
- fix meson has_function('fork') detection, needs suitable include to avoid
  false positive (see [1] for details)

Fixes:

  .../bootlin-armv7m-uclibc/host/opt/ext-toolchain/arm-buildroot-uclinux-uclibcgnueabi/bin/ld.real: lib/libv4lconvert/libv4lconvert.a(helper.c.o): in function `v4lconvert_helper_decompress':
  helper.c:(.text+0x14e): undefined reference to `fork'
  collect2: error: ld returned 1 exit status

[1] https://github.com/mesonbuild/meson/issues/7652

Signed-off-by: Peter Seiderer <ps.report@gmx.net>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>
(cherry picked from commit 2909221e0fd293d2dbb865776645fa3ec06d4bd5)
Signed-off-by: Gregor Jasny <gjasny@googlemail.com>

--- a/meson.build
+++ b/meson.build
@@ -111,7 +111,7 @@ dep_threads = dependency('threads')
 dep_x11 = dependency('x11', required : false)
 dep_xmlrpc = dependency('xmlrpc', required : false)
 
-have_fork = cc.has_function('fork')
+have_fork = cc.has_function('fork', prefix: '#include <unistd.h>')
 have_i2c_dev = cc.has_header('linux/i2c-dev.h')
 
 if have_visibility
