meson: v4l2grab needs libv4lconvert with fork support enabled
- v4l2grab needs libv4lconvert with fork support enabled

Fixes:

  FAILED: contrib/test/v4l2grab
  .../bootlin-armv7m-uclibc/host/bin/arm-linux-gcc  -o contrib/test/v4l2grab contrib/test/v4l2grab.p/v4l2grab.c.o -Wl,--as-needed -Wl,--no-undefined -Wl,-O1 -Wl,-elf2flt=-r -static -Wl,--start-group lib/libv4l2/libv4l2.a lib/libv4lconvert/libv4lconvert.a -largp -pthread -ldl -lm -lrt -Wl,--end-group
  .../bootlin-armv7m-uclibc/host/opt/ext-toolchain/arm-buildroot-uclinux-uclibcgnueabi/bin/ld.real: lib/libv4lconvert/libv4lconvert.a(libv4lconvert.c.o): in function `v4lconvert_destroy':
  libv4lconvert.c:(.text+0x5c0): undefined reference to `v4lconvert_helper_cleanup'
  .../bootlin-armv7m-uclibc/host/opt/ext-toolchain/arm-buildroot-uclinux-uclibcgnueabi/bin/ld.real: lib/libv4lconvert/libv4lconvert.a(libv4lconvert.c.o): in function `v4lconvert_convert_pixfmt':
  libv4lconvert.c:(.text+0x1450): undefined reference to `v4lconvert_helper_decompress'
  collect2: error: ld returned 1 exit status

Signed-off-by: Peter Seiderer <ps.report@gmx.net>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/contrib/test/meson.build
+++ b/contrib/test/meson.build
@@ -25,6 +25,7 @@ sliced_vbi_detect = executable('sliced-vbi-detect',
                                sliced_vbi_detect_sources,
                                include_directories : v4l2_utils_incdir)
 
+if have_fork
 v4l2grab_sources = files(
     'v4l2grab.c',
 
@@ -41,6 +42,7 @@ v4l2grab = executable('v4l2grab',
                       v4l2grab_sources,
                       dependencies : v4l2grab_deps,
                       include_directories : v4l2_utils_incdir)
+endif
 
 driver_test_sources = files(
     'driver-test.c',
