keytable: meson not passing rc_keymaps system directory
In the meson build ir_keytable_system_dir is used as the parent directory
for both rc_keymaps and rules.d, whereas udevrulesdir was defined
sepeartely in the configure script. Update the -DIR_KEYTABLE_SYSTEM_DIR
to include the rc_keymaps subdirectory aligning with the install_data
functions.

Signed-off-by: Rudi Heitbaum <rudi@heitbaum.com>
Signed-off-by: Sean Young <sean@mess.org>

--- a/utils/keytable/meson.build
+++ b/utils/keytable/meson.build
@@ -17,7 +17,7 @@ ir_keytable_system_dir = udevdir
 ir_keytable_user_dir = get_option('sysconfdir') / 'rc_keymaps'
 
 ir_keytable_c_args = [
-    '-DIR_KEYTABLE_SYSTEM_DIR="@0@"'.format(ir_keytable_system_dir),
+    '-DIR_KEYTABLE_SYSTEM_DIR="@0@"'.format(ir_keytable_system_dir / 'rc_keymaps'),
     '-DIR_KEYTABLE_USER_DIR="@0@"'.format(ir_keytable_user_dir),
 ]
 
