meson: Allow documentation directory to be specified with -Ddocdir
This is needed by Gentoo Linux QA.

Signed-off-by: James Le Cuirot <chewi@gentoo.org>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/doc/meson.build
+++ b/doc/meson.build
@@ -20,7 +20,7 @@ doxygen_install_dirs = []
 doxygen_output = []
 if get_option('doxygen-html')
     doxygen_output += 'html'
-    doxygen_install_dirs += get_option('datadir') / 'doc' / '@0@'.format(meson.project_name())
+    doxygen_install_dirs += docdir
 endif
 if get_option('doxygen-man')
     doxygen_output += 'man'
