--- a/utils/cec-ctl/cec-ctl.1.in
+++ b/utils/cec-ctl/cec-ctl.1.in
@@ -1,4 +1,4 @@
-.TH "CEC-CTL" "1" "August 2016" "v4l-utils @PACKAGE_VERSION@" "User Commands"
+.TH "CEC-CTL" "1" "August 2016" "v4l-utils @MAN_PACKAGE_VERSION@" "User Commands"
 .SH NAME
 cec-ctl - An application to control cec devices
 .SH SYNOPSIS
