--- a/utils/cec-compliance/cec-compliance.1.in
+++ b/utils/cec-compliance/cec-compliance.1.in
@@ -1,4 +1,4 @@
-.TH "CEC-COMPLIANCE" "1" "August 2016" "v4l-utils @PACKAGE_VERSION@" "User Commands"
+.TH "CEC-COMPLIANCE" "1" "August 2016" "v4l-utils @MAN_PACKAGE_VERSION@" "User Commands"
 .SH NAME
 cec-compliance - An application to verify remote CEC devices
 .SH SYNOPSIS
