--- a/utils/qv4l2/qv4l2.1.in
+++ b/utils/qv4l2/qv4l2.1.in
@@ -1,4 +1,4 @@
-.TH "QV4L2" "1" "March 2015" "v4l-utils @PACKAGE_VERSION@" "User Commands"
+.TH "QV4L2" "1" "March 2015" "v4l-utils @MAN_PACKAGE_VERSION@" "User Commands"
 .SH NAME
 qv4l2 - A test bench application for video4linux devices
 .SH SYNOPSIS
