v4l2gl: Add missing dependency on argp
The v4l2gl application uses argp_parse(), but is missing the dependency
on argp. This causes compilation failures in environments where the
function is provided by an external library. Fix it.

Signed-off-by: Laurent Pinchart <laurent.pinchart@ideasonboard.com>

--- a/contrib/test/meson.build
+++ b/contrib/test/meson.build
@@ -107,6 +107,7 @@ if dep_gl.found() and dep_glu.found() and dep_x11.found()
     )
 
     v4l2gl_deps = [
+        dep_argp,
         dep_gl,
         dep_glu,
         dep_libv4l2,
