keytable: meson: Restrict the installation of 50-rc_keymap.conf
Currently, meson tries to install 50-rc_keymap.conf even if systemd
is not used.

Commit 01f2c6c58e6f ("keytable: restrict installation of 50-rc_keymap.conf"),
only allowed 50-rc_keymap.conf to be installed when both BPF and systemd
were used.

Apply the same logic in meson to fix the problem.

Signed-off-by: Fabio Estevam <festevam@denx.de>
Signed-off-by: Sean Young <sean@mess.org>

--- a/utils/keytable/meson.build
+++ b/utils/keytable/meson.build
@@ -69,12 +69,16 @@ ir_keytable_udev_rules = files(
 install_data(ir_keytable_udev_rules,
              install_dir : ir_keytable_system_dir / 'rules.d')
 
+if ir_bpf_enabled
+if dep_systemd.found()
 if have_udevdsyscallfilter
     ir_keytable_systemd_files = files(
         '50-rc_keymap.conf',
     )
     install_data(ir_keytable_systemd_files,
                  install_dir : systemd_systemdir / 'systemd-udevd.service.d')
+endif
+endif
 endif
 
 # Install non-existing directory to create empty directory structure
