cec-compliance: add --show-timestamp option
Add a new option to prefix the test name with a timestamp. This
helps associating the test commands with the timestamps you see when
monitoring the CEC traffic. Without this it is hard to discover
when each test starts and ends and which CEC messages are actually
from each specific test.

Hopefully this will help with that.

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/cec-compliance/cec-compliance.1.in
+++ b/utils/cec-compliance/cec-compliance.1.in
@@ -123,7 +123,10 @@ Turn on verbose reporting.
 Show version information.
 .TP
 \fB\-w\fR, \fB\-\-wall\-clock\fR
-Show timestamps as wall-clock time. This also turns on verbose reporting.
+Show timestamps as wall-clock time.
+.TP
+\fB\-S\fR, \fB\-\-show\-timestamp\fR
+For each test, show the timestamp of when the test started.
 .TP
 \fB\-T\fR, \fB\-\-trace\fR
 Trace all called ioctls. Useful for debugging.
