v4l-utils: sync with latest kernel
Sync up with the latest media_stage master tree.

This also drops include/linux/compiler.h since it is no longer
needed (and hasn't been for a long time).

Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/utils/keytable/rc_keymaps/meson.build
+++ b/utils/keytable/rc_keymaps/meson.build
@@ -94,6 +94,7 @@ ir_keytable_rc_keymaps = files(
     'msi_digivox_ii.toml',
     'msi_tvanywhere_plus.toml',
     'msi_tvanywhere.toml',
+    'mygica_utv3.toml',
     'nebula.toml',
     'nec_terratec_cinergy_xs.toml',
     'norwood.toml',
