--- a/utils/keytable/rc_maps.cfg
+++ b/utils/keytable/rc_maps.cfg
@@ -112,6 +112,7 @@
 *	rc-msi-digivox-iii       msi_digivox_iii.toml
 *	rc-msi-tvanywhere-plus   msi_tvanywhere_plus.toml
 *	rc-msi-tvanywhere        msi_tvanywhere.toml
+*	rc-mygica-utv3           mygica_utv3.toml
 *	rc-nebula                nebula.toml
 *	rc-nec-terratec-cinergy-xs nec_terratec_cinergy_xs.toml
 *	rc-norwood               norwood.toml
