v4l-utils: fix compilation with external intl
Currently there's an assumption that intl is provided by libc. This is
not always the case, especially when deciding to use external Gettext.

Signed-off-by: Rosen Penev <rosenp@gmail.com>
Signed-off-by: Hans Verkuil <hverkuil-cisco@xs4all.nl>

--- a/lib/libdvbv5/meson.build
+++ b/lib/libdvbv5/meson.build
@@ -124,6 +124,7 @@ install_headers(libdvbv5_api, subdir: 'libdvbv5')
 
 libdvbv5_deps = [
     dep_iconv,
+    dep_intl,
     dep_libm,
     dep_librt,
     dep_libudev,
